--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -18,3 +18,89 @@ body{
 a{
     color:#999;
 }
+// color
+$colors:(
+    "primary":#db9e3f,
+    "white":#fff,
+    "black":#000,
+    "dark":#222,
+    "dark-1":#343440,
+    "light":#f9f9f9,
+    "grey":#999
+);
+
+//文字颜色和背景色
+@each $colorKey,$color in $colors {
+    .text-#{$colorKey}{
+        color:$color
+    }
+    .bg-#{$colorKey}{
+        background-color: $color
+    }
+}
+
+//文字对齐
+@each $var in (left,right,center) {
+    .text-#{$var}{
+        text-align: $var
+    }
+}
+
+//字体尺寸
+$base-font-size:1rem;
+$font-sizes:(
+    xs:0.7692,//10px
+    sm:0.9231,//12px
+    md:1,//13px
+    lg:1.0769,//14px
+    xl:1.2308,//16px
+);
+@each $sizeKey,$size in $font-sizes {
+    .fs-#{$sizeKey}{
+        font-size:$size*$base-font-size
+    }
+}
+
+//flex
+.d-flex{
+    display:flex;
+}
+.flex-column{
+    flex-direction: column;
+}
+
+//弹性布局主轴方向对齐方式
+$flex-jc:(
+    start:flex-start,
+    end:flex-end,
+    center:center,
+    between:space-between,
+    around:space-around
+);
+@each $key,$value in $flex-jc {
+    .jc-#{$key}{
+        justify-content:$value
+    }
+}
+
+//弹性布局交叉轴方向对齐方式
+$flex-ai:(
+    start:flex-start,
+    end:flex-end,
+    center:center,
+    stretch:stretch
+);
+@each $key,$value in $flex-ai {
+    .ai-#{$key}{
+        align-items: $value
+    }
+}
+
+.flex-1{
+    flex:1;
+}
+.flex-grow-1{
+    flex-grow: 1;
+}
+
+
