--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -22,7 +22,7 @@ a{
 $colors:(
     "primary":#db9e3f,
     "white":#fff,
-    "black":#000,
+    "black":#000, 
     "dark":#222,
     "dark-1":#343440,
     "light":#f9f9f9,
@@ -104,3 +104,39 @@ $flex-ai:(
 }
 
 //边距margin,padding
+$spacing-types:(m:margin, p:padding);
+$spacing-direction:(t:top, r:right, b:bottom, l:left);
+$spacing-base-size:1rem;
+$spacing-sizes:(0:0, 1:0.25, 2:0.5, 3:1, 4:1.5, 5:3);//参考bootstarp
+
+@each $typeKey,$type in $spacing-types {
+    //.m-0{margin:1rem;}
+    @each $sizeKey,$size in $spacing-sizes {
+        .#{$typeKey}-#{$sizeKey}{
+            #{$type}:$size * $spacing-base-size;
+        }
+    }
+
+    //.mx-1{margin:0}
+    @each $sizeKey,$size in $spacing-sizes {
+        .#{$typeKey}x-#{$sizeKey}{
+            #{$type}-left:$size * $spacing-base-size;
+            #{$type}-right:$size * $spacing-base-size;
+        }
+    }
+    @each $sizeKey,$size in $spacing-sizes {
+        .#{$typeKey}y-#{$sizeKey}{
+            #{$type}-top:$size * $spacing-base-size;
+            #{$type}-bottom:$size * $spacing-base-size;
+        }
+    }
+
+    //.mt-1{margin-top:1rem}
+    @each $directionKey,$direction in $spacing-direction {
+        @each $sizeKey,$size in $spacing-sizes {
+            .#{$typeKey}#{$directionKey}-#{$sizeKey}{
+                #{$type}-#{$direction}:$size * $spacing-base-size;
+            }
+        }
+    }
+}
