--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -25,6 +25,7 @@ $colors:(
     "black":#000, 
     "dark":#222,
     "dark-1":#343440,
+    "grey-1":#666,
     "light":#f9f9f9,
     "grey":#999
 );
@@ -49,6 +50,7 @@ $colors:(
 //字体尺寸
 $base-font-size:1rem;
 $font-sizes:(
+    xxs:0.6154,//8px
     xs:0.7692,//10px
     sm:0.9231,//12px
     md:1,//13px
@@ -139,4 +141,23 @@ $spacing-sizes:(0:0, 1:0.25, 2:0.5, 3:1, 4:1.5, 5:3);//参考bootstarp
             }
         }
     }
+}
+
+// button
+.btn{
+    border:none;
+    border-radius: 2px;
+    -webkit-font-smoothing:antialiased;
+    //font-size:map-get($font-sizes,'sm') * $base-font-size 
+}
+
+//nav
+.nav{
+    .nav-item{
+        //border-bottom:3px solid transparent;
+        &.active{
+            border-bottom:3px solid #fff;
+        }
+    }
+    
 }
