--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -154,4 +154,10 @@ a{
         height:1.5385rem;
         background-position: 90.483% 15.614%;
     }
+
+    &.sprite-arrow{
+        width: 0.7692rem;
+	    height: 0.7692rem;
+        background-position: 38.577% 52.076%;
+    }
 }
