--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -155,9 +155,64 @@ a{
         background-position: 90.483% 15.614%;
     }
 
+    &.sprite-store{
+        width: 1.4615rem;
+        height: 1.6923rem;
+        background-position: 36.746% 0.924%;
+    }
+
+    &.sprite-experience{
+        width: 1.4615rem;
+        height: 1.6923rem;
+        background-position: 10.408% 15.517%;
+    }
+
+    &.sprite-newplayer{
+        width: 1.5385rem;
+	    height: 1.6154rem;
+        background-position: 89.733% 1.266%;
+    }
+
+    &.sprite-lineage{
+        width: 1.8462rem;
+	    height: 1.5385rem;
+        background-position: 36.467% 15.287%;
+    }
+
+    &.sprite-colleagues{
+        width: 2rem;
+        height: 1.6154rem;
+        background-position: 9.728% 1.266%;
+    }
+
+    &.sprite-wangzhe{
+        width: 1.8462rem;
+	    height: 1.8462rem;       
+        background-position: 63.3% 0.927%;
+    }
+
+    &.sprite-weixin{
+        width: 1.8462rem;
+	    height: 1.5385rem;
+        background-position: 0 96.207%;
+    }
+
+    &.sprite-lineage{
+        width: 1.8462rem;
+	    height: 1.5385rem;
+        background-position: 36.467% 15.287%;
+    }
+
+    &.sprite-version{
+        background: url('../images/version.png') no-repeat 0 0;
+        background-size: 2rem 1.8462rem;
+        width: 2rem;
+        height: 1.8462rem;
+    }
+
     &.sprite-arrow{
-        width: 0.7692rem;
-	    height: 0.7692rem;
+        width: 1.5385rem;
+        height: 1.5385rem;
         background-position: 38.577% 52.076%;
     }
 }
