--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -43,6 +43,13 @@ a{
         font-size:$size*$base-font-size
     }
 }
+//text-overflow
+.text-ellipsis{
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 
 //wdith,height
