--- a/admin/src/css/main.css
+++ b/admin/src/css/main.css
@@ -23,6 +23,10 @@
     line-height: 5rem;
     display: block;
   }
+  .banner{
+    max-height: 20rem;
+    display: block;
+  }
   .el-form-item .el-form-item{
       margin-bottom:10px;
   }
