--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -3,6 +3,8 @@ $colors:(
     "primary":#db9e3f,
     "info":#4b67af,
     "blue":#4394e4,
+    "blue-1":#1e3595,
+    "danger":#781a16,
     "white":#fff,
     "black":#000, 
     "dark":#222,
