英雄详情完成

--- a/web/src/assets/scss/_variables.scss
+++ b/web/src/assets/scss/_variables.scss
@@ -6,6 +6,8 @@ $colors:(
     "blue-1":#1e3595,
     "danger":#781a16,
     "white":#fff,
+    "white-1":#fcfcfc,
+    "white-2":#eceef0,
     "black":#000, 
     "dark":#222,
     "dark-1":#343440,
